<resources>
    <string name="app_name">Get2gether</string>
    <string name="sample_text">NOT SPECIFIED</string>
    <string name="user_name">Username</string>
    <string name="continue_button">Continue</string>
    <string name="create_acc_button">Create Account</string>
    <string name="login_button">Login</string>
    <string name="help_option">Help</string>
    <string name="about_option">About</string>
    <string name="logoff_option">Log off</string>
    <string name="clean"> </string>
    <string name="groups">Groups</string>
    <string name="friends">Friends</string>
    <string name="profile">Profile</string>
    <string name="profile_user">Name</string>
    <string name="profile_username">Username</string>
    <string name="profile_description">Description</string>
    <string name="profile_password">Password</string>
    <string name="profile_repeat_password">Repeat password</string>
    <string name="search_text">Search</string>
    <string name="add_friends_text">Find friend</string>
    <string name="active">Active</string>
    <string name="active_members">Active Members:</string>
    <string name="inactive_members">Inactive Members:</string>
    <string name="new_group_name">Group Name</string>
    <string name="new_group_about">About:</string>
    <string name="new_group_about_hint"><font size="16">Write something which characterizes the group</font></string>
    <string name="new_group_select_members">Select member to add</string>
    <string name="hint_search_member">Search for friend</string>
    <string name="add_member_text">Add member</string>
    <string name="members">Members:</string>
    <string name="remove_member_text">Remove Member</string>
    <string name="add_pending_friend_button_text">Add Pending Friend</string>
    <string name="add_new_friend_button_text">Add New Friend</string>
    <string name="create_new_group_button_text">Create Group</string>
    <string name="add_pending_group_button_text">Add Pending Group</string>
    <string name="selected_group_edit_button_text">Edit Group</string>
    <string name="selected_group_leave_group_button_text">Leave Group</string>

    <string name="facebook_app_id">130211184178695</string>
    <string name="profile_unique_id">Unique ID</string>

</resources>
