<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_new_group"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oestjacobsen.android.get2gether.view.groups.NewGroupActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/new_group_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBackground"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:title="@string/friends"
        />


    <RelativeLayout
        android:id="@+id/new_group_textfields_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_below="@id/new_group_toolbar">


        <TextView
            android:id="@+id/new_group_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_text"
            android:text="@string/new_group_name"
            />

        <EditText
            android:id="@+id/new_group_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_group_name_text_view"
            android:textSize="@dimen/small_text"

            />

        <TextView
            android:id="@+id/new_group_about_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_group_about"
            android:layout_below="@id/new_group_name_edit_text"
            android:paddingTop="20dp"
            />

        <EditText
            android:id="@+id/new_group_about_edit_text"
            android:layout_width ="match_parent"
            android:layout_height ="wrap_content"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines ="4"
            android:scrollHorizontally="false"
            android:hint="@string/new_group_about_hint"
            android:layout_below="@id/new_group_about_text_view"

            />

        <TextView
            android:id="@+id/new_group_members_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/members"
            android:layout_below="@id/new_group_about_edit_text"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/new_group_add_member_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_member_text"
            android:layout_below="@id/new_group_members_text_view"
            android:layout_marginTop="@dimen/small_text"
            />

        <Button
            android:id="@+id/new_group_remove_member_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_member_text"
            android:layout_below="@id/new_group_members_text_view"
            android:layout_toRightOf="@id/new_group_add_member_button"
            android:layout_marginTop="@dimen/small_text"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/new_group_show_members_recyclerview"
            android:paddingTop="@dimen/text_separation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/new_group_add_member_button"
            android:scrollbars="vertical"
            />



    </RelativeLayout>



    <android.support.design.widget.FloatingActionButton
        android:src="@drawable/ic_done_black_24dp"
        app:backgroundTint="@color/colorFloatingButton"
        app:fabSize="normal"
        android:id="@+id/floating_button_new_group_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="30dp"/>



</RelativeLayout>
