<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_edit_profile"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.oestjacobsen.android.get2gether.view.profile.EditProfileActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/edit_profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBackground"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:title="@string/clean"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:layout_below="@id/edit_profile_toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_user"
            android:textSize="12sp"
            />

        <EditText
            android:id="@+id/profile_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clean"
            android:textSize="16sp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_username"
            android:textSize="12sp"
            android:paddingTop="@dimen/text_separation"/>

        <EditText
            android:id="@+id/profile_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clean"
            android:textSize="16sp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_description"
            android:textSize="12sp"
            android:paddingTop="@dimen/text_separation"/>

        <EditText
            android:id="@+id/profile_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clean"
            android:textSize="16sp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_password"
            android:textSize="12sp"
            android:paddingTop="@dimen/text_separation"/>

        <EditText
            android:id="@+id/profile_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clean"
            android:inputType="textPassword"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_repeat_password"
            android:textSize="12sp"
            android:paddingTop="@dimen/text_separation"/>

        <EditText
            android:id="@+id/profile_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clean"
            android:inputType="textPassword"
            android:textSize="16sp"/>


    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:src="@drawable/ic_done_black_24dp"
        app:backgroundTint="@color/colorFloatingButton"
        app:fabSize="normal"
        android:id="@+id/floating_button_acceptprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="30dp"/>

</RelativeLayout>
