<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/text_separation">

    <TextView
        android:id="@+id/active_members_textview"
        android:text="@string/active_members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />


    <TextView
        android:id="@+id/active_members_number"
        android:text="@string/sample_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/active_members_textview"
        />

    <TextView
        android:id="@+id/inactive_members_textview"
        android:text="@string/inactive_members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/active_members_textview"
        android:paddingTop="@dimen/text_separation"
        />


    <TextView
        android:id="@+id/inactive_members_number"
        android:text="@string/sample_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/active_members_textview"
        android:layout_toRightOf="@id/inactive_members_textview"
        android:paddingTop="@dimen/text_separation"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/selected_group_members_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inactive_members_textview"
        android:paddingTop="@dimen/text_separation">

    </android.support.v7.widget.RecyclerView>



</RelativeLayout>