<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_add_group_member"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oestjacobsen.android.get2gether.view.groups.AddGroupMemberActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/add_group_member_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBackground"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:title="@string/friends"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        android:layout_below="@id/add_group_member_toolbar">

        <TextView
            android:id="@+id/new_group_addfriend_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_text"
            android:text="@string/new_group_select_members"
            android:paddingTop="@dimen/text_separation"/>

        <EditText
            android:id="@+id/new_group_search_friend_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_search_member"
            android:layout_below="@id/new_group_addfriend_textview"
            android:paddingTop="@dimen/text_separation"
            android:textSize="@dimen/large_text"
            android:maxLines="1"/>

        <Button
            android:id="@+id/new_group_search_friend_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_text"
            android:layout_below="@id/new_group_search_friend_edittext"
            android:layout_alignParentRight="true"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/new_group_selectfriend_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/new_group_search_friend_button"
            android:scrollbars="vertical" />

        <android.support.design.widget.FloatingActionButton
            android:src="@drawable/ic_done_black_24dp"
            app:backgroundTint="@color/colorFloatingButton"
            app:fabSize="normal"
            android:id="@+id/floating_button_add_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="30dp"/>


    </RelativeLayout>


</RelativeLayout>
