<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_pincode"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.oestjacobsen.android.get2gether.view.login.PincodeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/pincode_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBackground"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:title="@string/clean"
        />

    <ImageView
        android:id="@+id/pincode_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/specified_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clean"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/enter_pincode"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/specified_username"
            android:inputType="numberPassword"
            />

        <Button
            android:id="@+id/login_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/login_button"
            android:layout_below="@id/enter_pincode"
            android:layout_alignRight="@id/enter_pincode"/>

        <Button
            android:id="@+id/create_acc_button_pincode"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/create_acc_button"
            android:layout_below="@id/login_button"
            android:layout_alignRight="@id/login_button"/>

    </RelativeLayout>

</LinearLayout>
