<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.oestjacobsen.android.get2gether.view.login.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBackground"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:title="@string/clean"
        />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/username_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"

            />

        <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/username_text_view"
            />

        <Button
            android:id="@+id/continue_button_login"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/continue_button"
            android:layout_below="@id/username_edit_text"
            android:layout_alignRight="@id/username_edit_text"
            />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_facebook_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingStart="12dp"
            android:paddingRight="0dp"
            android:paddingEnd="0dp"
            android:drawablePadding="40dp"
            android:layout_below="@id/continue_button_login"/>

    </RelativeLayout>


</LinearLayout>
